2009-09-15  Mike Krüger  <mkrueger@novell.com>

	* Parser/CSharpFormatter.cs: worked on formatting.

2009-09-15  Mike Krüger  <mkrueger@novell.com>

	* Parser/CSharpFormatter.cs: Worked on code formatting.

2009-09-12  Mike Krüger  <mkrueger@novell.com>

	* Gui/CSharpTextEditorCompletion.cs: Added auto complete empty
	  match == false for 'hint' enum completion.

2009-09-12  Mike Krüger  <mkrueger@novell.com>

	* Gui/NewOverrideCompletionData.cs:
	* Gui/CSharpTextEditorCompletion.cs:
	* Gui/EventCreationCompletionData.cs:
	* Gui/NRefactoryParameterDataProvider.cs:
	* Gui/NRefactoryIndexerParameterDataProvider.cs:
	* Gui/NRefactoryTemplateParameterDataProvider.cs: Track API
	  changes.

2009-09-12  Mike Krüger  <mkrueger@novell.com>

	* Gui/NRefactoryResolver.cs: removed debug message.

2009-09-11  Mike Krüger  <mkrueger@novell.com>

	* Parser/CSharpFormatter.cs: worked on formatting.

2009-09-11  Mike Krüger  <mkrueger@novell.com>

	* Parser/CSharpFormatter.cs: Fixed "Bug 538296 -
	  Autocompletion makes weird indentation on svn build".

2009-09-11  Mike Krüger  <mkrueger@novell.com>

	* Gui/ResolveVisitor.cs:
	* Gui/NRefactoryResolver.cs: Fixed "Bug 538208 - Go to
	  declaration not working over a generic method...".

2009-09-10  Mike Krüger  <mkrueger@novell.com>

	* Parser/CSharpFormatter.cs:
	* Gui/CSharpTextEditorIndentation.cs: Track API changes/worked
	  on code formatter.

2009-09-08  Mike Krüger  <mkrueger@novell.com>

	* Parser/CSharpFormatter.cs: Improved formatting merge
	  algorithm (fixing Bug 537374 - On-the-fly formatting: New
	  line incorrectly inserted in property).

2009-09-08  Mike Krüger  <mkrueger@novell.com>

	* Gui/CSharpAmbience.cs:
	* Parser/FindMemberAstVisitor.cs: Removed debug message.

2009-09-08  Mike Krüger  <mkrueger@novell.com>

	* Gui/CSharpTextEditorIndentation.cs: fixed "Bug 537187 - When
	  'interpret tab as reindent' option is set, code templates
	  don't work".

2009-09-08  Mike Krüger  <mkrueger@novell.com>
