@@ -1,5 +1,10 @@
 2009-09-15  Mike Krüger  <mkrueger@novell.com>
 
+	* Parser/CSharpFormatter.cs: Added short way to format whole
+	  document.
+
+2009-09-15  Mike Krüger  <mkrueger@novell.com>
+
 	* Parser/CSharpFormatter.cs: worked on formatting.
 
 2009-09-15  Mike Krüger  <mkrueger@novell.com>
